--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Raleway:wght@400;700&display=swap"
           rel="stylesheet">
     <link rel="stylesheet" href="assets/css/index.css">
+
+    <style>
+        .attribution { font-size: 11px; text-align: center; }
+        .attribution a { color: hsl(228, 45%, 44%); }
+    </style>
 </head>
 <body>
 <header class="loading-page__header">
@@ -145,6 +150,10 @@
             </a>
         </div>
     </section>
+    <p class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+        Coded by <a href="#">Your Name Here</a>.
+    </p>
 </footer>
 <script src="assets/js/index.js"></script>
 </body>
