--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     </section>
     <p class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-        Coded by <a href="#">Your Name Here</a>.
+        Coded by <a href="#">Mark Anthony Jorge C.</a>.
     </p>
 </footer>
 <script src="assets/js/index.js"></script>
