Fix descriptive texts for social media links

--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@
             </ul>
         </nav>
         <div class="loading-page__contact-detail-social">
-            <a href="#">
+            <a href="#" aria-label="Link to facebook social network">
                 <img src="images/icon-facebook.svg" alt="">
             </a>
-            <a href="#">
+            <a href="#" aria-label="Link to twitter social network">
                 <img src="images/icon-twitter.svg" alt="">
             </a>
-            <a href="#">
+            <a href="#" aria-label="Link to instagram social network">
                 <img src="images/icon-instagram.svg" alt="">
             </a>
         </div>
