Fix unique waypoints in header navigation

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <img src="images/logo.svg" alt="Fylo page logo">
     <nav class="loading-page__header-navigation" role="navigation">
         <ul>
-            <li>Features</li>
-            <li>Team</li>
-            <li>Sign In</li>
+            <li><a href="#">Features</a></li>
+            <li><a href="#">Team</a></li>
+            <li><a href="#">Sign In</a></li>
         </ul>
     </nav>
 </header>
