--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     Access them wherever you need. share and collaborate with friends,
                     family, and co-workers.</p>
             </div>
-            <form class="loading-page__get-started-form" action="">
+            <form class="loading-page__get-started-form" action="#">
                 <label class="visually-hidden" for="get-started-email">Email:</label>
                 <div class="input-group">
                     <input class="input-control" type="text" name="get-started-email" id="get-started-email"
@@ -96,7 +96,7 @@
             <p>It only takes a minute to sign up and our free starter tier is extremely generous.
                 If you have any questions, our support team would be happy to help you.</p>
         </div>
-        <form class="loading-page__free-get-started-form" action="">
+        <form class="loading-page__free-get-started-form" action="#">
             <label class="visually-hidden" for="free-get-started-email">Email:</label>
             <div class="input-group">
                 <input class="input-control" type="text" name="free-get-started-email" id="free-get-started-email"
