Remove unnecessary role attributes in nav tags

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <header class="loading-page__header">
     <h1 class="visually-hidden">Fylo</h1>
     <img src="images/logo.svg" alt="Fylo page logo">
-    <nav class="loading-page__header-navigation" role="navigation">
+    <nav class="loading-page__header-navigation">
         <ul>
             <li><a href="#">Features</a></li>
             <li><a href="#">Team</a></li>
@@ -123,7 +123,7 @@
                 <span>example@fylo.com</span>
             </div>
         </div>
-        <nav class="loading-page__contact-navigation" role="navigation">
+        <nav class="loading-page__contact-navigation">
             <ul>
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Jobs</a></li>
@@ -131,7 +131,7 @@
                 <li><a href="#">Blog</a></li>
             </ul>
         </nav>
-        <nav class="loading-page__contact-navigation" role="navigation">
+        <nav class="loading-page__contact-navigation">
             <ul>
                 <li><a href="#">Contact Us</a></li>
                 <li><a href="#">Terms</a></li>
