Change section container tag to div to fix semantics issues

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <div class="loading-page__contact-logo">
         <img src="images/logo-white.svg" alt="Fylo page logo">
     </div>
-    <section class="loading-page__contact-detail">
+    <div class="loading-page__contact-detail">
         <div class="loading-page__contact-detail-info">
             <div>
                 <img src="images/icon-phone.svg" alt="">
@@ -149,7 +149,7 @@
                 <img src="images/icon-instagram.svg" alt="">
             </a>
         </div>
-    </section>
+    </div>
     <p class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
         Coded by <a href="#">Mark Anthony Jorge C.</a>.
