--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <img src="images/logo.svg" alt="Fylo page logo">
     <nav class="loading-page__header-navigation">
         <ul>
-            <li><a href="#">Features</a></li>
-            <li><a href="#">Team</a></li>
-            <li><a href="#">Sign In</a></li>
+            <li><a href="#" aria-label="Features">Features</a></li>
+            <li><a href="#" aria-label="Team">Team</a></li>
+            <li><a href="#" aria-label="Sign In">Sign In</a></li>
         </ul>
     </nav>
 </header>
@@ -125,17 +125,17 @@
         </div>
         <nav class="loading-page__contact-navigation">
             <ul>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Jobs</a></li>
-                <li><a href="#">Press</a></li>
-                <li><a href="#">Blog</a></li>
+                <li><a href="#" aria-label="About Us">About Us</a></li>
+                <li><a href="#" aria-label="Jobs">Jobs</a></li>
+                <li><a href="#" aria-label="Press">Press</a></li>
+                <li><a href="#" aria-label="Blog">Blog</a></li>
             </ul>
         </nav>
         <nav class="loading-page__contact-navigation">
             <ul>
-                <li><a href="#">Contact Us</a></li>
-                <li><a href="#">Terms</a></li>
-                <li><a href="#">Privacy</a></li>
+                <li><a href="#" aria-label="Contact Us">Contact Us</a></li>
+                <li><a href="#" aria-label="Terms">Terms</a></li>
+                <li><a href="#" aria-label="Privacy">Privacy</a></li>
             </ul>
         </nav>
         <div class="loading-page__contact-detail-social">
